--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,10 +2,9 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/main/containers/python-3
 {
 	"name": "Python 3 Server",
-	"forwardPorts": [80],
 	"build": {
 		"dockerfile": "../dev-environment/Dockerfile",
-		"context": ".."
+		"context": "../dev-environment"
 	},
 
 	// Configure tool-specific properties.
@@ -37,15 +36,15 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [80],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install --disable-pip-version-check --no-cache-dir --upgrade -r ../dev-environment/requirements.txt",
+	"postCreateCommand": "uvicorn dev-environment.src.main:app --host 0.0.0.0 --port 80 --reload"
 
 	// "features": {
 	// 	"azure-cli": "latest"
 	// },
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	// "remoteUser": "vscode"
 }
