--- a/dev-environment/docker-compose.yml
+++ b/dev-environment/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
-    ports:
-      - 80:80
-      - 5678:5678
+    # ports:
+    #   - 80:80
+    #   - 5678:5678
     volumes:
       - .:/code
     depends_on:
